start working with change image in picbox

--- a/Airport/Airport.vcxproj
+++ b/Airport/Airport.vcxproj
@@ -132,16 +132,24 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyForm.cpp" />
+    <ClCompile Include="plane.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="plane.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Pictures\img1.png" />
+    <Image Include="..\Pictures\full-full start takes off01.png" />
+    <Image Include="..\Pictures\full-full start takes off02.png" />
+    <Image Include="..\Pictures\full-full start takes off03.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
